<resources>
    <string name="app_name">Brawl Wiki</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_players">Players</string>
    <string name="menu_brawlers">Brawlers</string>
    <string name="menu_clubs">Clubs</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_profile_settings">Profile Settings</string>
    <string name="menu_brawler_details">Brawler Details</string>
    <string name="menu_about">About</string>
    <string name="banner_unit_id">ca-app-pub-5400382207120287/1643074997</string>
    <string name="description_shelly">Shelly\'s spread-fire shotgun blasts the other team with
        buckshot. Her Super destroys cover and keeps her opponents at a distance!</string>
    <string name="description_bit">8-BIT lumbers along like an arcade cabinet on legs. He shoots
        Blaster Beams and his Super boosts friendlies\' damage!</string>
    <string name="description_colt">Colt fires an accurate burst of bullets from his dual revolvers.
        His Super shreds cover and extends the bullet barrage!</string>
    <string name="description_bull">Bull deals massive damage up close with his shotgun. For his
        Super move, he charges through barriers and knocks back enemies!</string>
    <string name="description_nita">Nita strikes her enemies with a thunderous shockwave. Her Super
        summons a massive bear to fight by her side!</string>
    <string name="description_dynamike">Dynamike lobs two explosive sticks of dynamite. His Super
        attack is a whole barrel full of dynamite that blows up cover!</string>
    <string name="description_bo">Bo fires three explosive arrows toward his targets. His Super ability
        places a trio of hidden, explosive mines on the ground!</string>
    <string name="description_emz">Emz attacks with blasts of hair spray that deal damage over time, and
        slows down opponents with her Super.</string>
    <string name="description_jessie">Jessie\'s Shock Rifle shoots energy orbs that bounce between enemies.
        Her Super deploys a cute but deadly gun turret!</string>
    <string name="description_brock">Brock fires a long-range, explosive rocket at enemies. His Super is a
        ballistic rocket barrage that destroys cover!</string>
    <string name="description_rosa">This boxing botanist will plant her feet and go toe to toe! Her Super gives
        her tough, vegan protective gear.</string>
    <string name="description_primo">El Primo throws a flurry of punches at his enemies. His Super is a leaping
        elbow drop that deals damage to all caught underneath!</string>
    <string name="description_poco">Poco fires damaging sound waves at enemies. His Super can heal both Poco
        himself and his teammates!</string>
    <string name="description_barley">Barley attacks by lobbing bottles at enemies, doing splash damage. His
        Super is a huge barrage of burning bottles!</string>
    <string name="description_jacky">Jacky works her Jackhammer to shake up the ground and nearby enemies.
        Her Super pulls in nearby foes, leaving them in the dust!</string>
    <string name="description_darryl">Jacky works her Jackhammer to shake up the ground and nearby enemies.
        Her Super pulls in nearby foes, leaving them in the dust!</string>
    <string name="description_rico">Rico fires a burst of bullets that bounce off walls. His Super burst is
        a long barrage of bouncy bullets that pierce targets!</string>
    <string name="description_carl">Carl throws his Pickaxe like a boomerang. His Super is a crazy cart spin
        that clobbers anyone around him.</string>
    <string name="description_penny">Penny shoots bags of coins, damaging the target and anyone standing behind.
        Her Super is a mortar-style cannon turret!</string>
    <string name="description_piper">Piper\'s sniper shots do more damage the farther they travel. Her Super drops
        grenades at her feet, while Piper herself leaps away!</string>
    <string name="description_bibi">Batter up! Bibi\'s got a sweet swing that can knock back enemies when her Home
        Run bar is charged. Her Super is a bouncing ball of gum that deals damage.</string>
    <string name="description_bea">Bea loves bugs and hugs. She shoots her mechanical drones at range, and her Super
        sends forth an angry army of swarming bees!</string>
    <string name="description_nani">Nani loves her friends and looks over them with a watchful lens. She handles threats
        with angled shots, and her Super allows Nani to commandeer her pal Peep, who goes out with a bang!</string>
    <string name="description_frank">Frank swings his hammer at enemies, sending a shockwave. His Super is an especially
        powerful blow that stuns enemies!</string>
    <string name="description_pam">Pam shoots from the hip, peppering targets with shrapnel. Her Super is a healing turret
        that restores her and teammates\' health!</string>
    <string name="description_max">Max goes fast! Her attack is a fast-firing blaster. Her Super speeds up her and allies!</string>
    <string name="description_mortis">Mortis dashes forward with each swing of his shovel. As his Super attack, he sends
        a cloud of bats to damage enemies and heal himself!</string>
    <string name="description_sprout">Sprout was built to plant life, launching bouncy Seed Bombs with reckless love. Its Super
        creates a plant-based obstacle!</string>
    <string name="description_gene">Gene uses his magic lamp to shoot a splitting projectile. His super is a magical hand that
        grabs and pulls enemies close!</string>
    <string name="description_tick">Tick is a metal ball of barely controlled excitement and energy - explosive energy! He throws
        mines, and his Super makes his head detach, seek a target and explode.</string>
    <string name="description_tara">Tara\'s triple tarot card attack pierces through enemies. Her Super is a black hole that
        sucks in all nearby enemies, causing damage!</string>
    <string name="description_mrp">Mr. P is a disgruntled luggage handler who angrily hurls suitcases at opponents. His Super
        calls robo-porters to help him.</string>
    <string name="description_amber">Amber has always been a firebug. She loves to light up the world and any opponents that
        come at her!</string>
    <string name="description_leon">Leon shoots a quick salvo of blades at his target. His Super trick is a smoke bomb that
        makes him invisible for a little while!</string>
    <string name="description_crow">Crow fires a trio of poisoned daggers. As a Super move he leaps, firing daggers both on
        jump and on landing!</string>
    <string name="description_spike">Spike throws cactus grenades that send needles flying, and a show-stopping Super: a field of
        cactus spines that slows down and damages enemies!</string>
    <string name="description_sandy">Sandy is a sleep-deprived Brawler with powerful control over sand: casting sharp pebbles at
        enemies, and summoning a sandstorm to hide teammates.</string>
    <string name="description_colette">Colette is going to get you! She taxes opponents\' health and has fancy moves to boot.</string>
    <string name="description_surge">He\'s a Protector with a penchant for parties. Surge attacks foes with energy drink
        blasts that split in 2 on contact. His Super upgrades his stats in 3 stages and comes complete with totally awesome Body mods!</string>
    <string name="description_gale">Gale is a tireless handyman who gets no rest. With his blower, he blasts foes with a wide shot of
        wind and snow, while his Super pushes them back with a forceful blizzard!</string>
    <string name="star_shelly_one">Shelly\'s Super shells slow down enemies for 3.0 seconds!</string>
    <string name="star_shelly_two">When Shelly falls below 40% health, she instantly heals for 1800 health. Band-Aid recharges in 20.0 seconds.</string>
    <string name="star_nita_one">Nita recovers 500 health whenever her bear hits an enemy. When Nita deals damage, her bear regains 500 health.</string>
    <string name="star_nita_two">Nita\'s bear attacks faster. Time between swipes is reduced by 60%.</string>
    <string name="star_colt_one">Colt\'s movement speed is increased by 10%.</string>
    <string name="star_colt_two">Colt’s main attack range and bullet speed are increased by 11%.</string>
    <string name="star_bull_one">When Bull falls below 40% health, his reload speed doubles!</string>
    <string name="star_bull_two">When Bull falls below 40% health, he gains a shield that reduces all damage taken by 30%.</string>
    <string name="star_jessie_one">Jessie can repair her gun turret for 800 of its missing health by zapping it with her attack.</string>
    <string name="star_jessie_two">Scrappy the Turret now shoots energy orbs that bounce between enemies. The orbs\' range after a bounce is 51% of normal range.</string>
    <string name="star_brock_one">The impact of Brock\'s attack sets the ground on fire. Enemies in the area take 600 damage per second! Lasts for 2 seconds.</string>
    <string name="star_brock_two">Brock loads a fourth rocket into his launcher, increasing his ammo capacity (and discarding the thermos bottle he\'s been keeping in his launcher\'s #4 rube).</string>
    <string name="star_dynamike_one">Dynamike can ride the blast wave of his explosives to jump over obstacles!</string>
    <string name="star_dynamike_two">Adds +1000 damage to Mike’s Super.</string>
    <string name="star_bo_one">Bo spots enemies hidden in bushes from 150% longer distance than normally.</string>
    <string name="star_bo_two">Instead of a knockback, Bo’s traps now stun the enemy for 2.0 seconds.</string>
    <string name="star_tick_one">When Tick takes no damage and doesn\'t attack, he starts recovering health 2.0 seconds faster than normal.</string>
    <string name="star_tick_two">Tick\'s reload time is 10% shorter.</string>
    <string name="star_bit_one">Increases the Damage Booster\'s range by 50%.</string>
    <string name="star_bit_two">When 8-Bit is near his Damage Booster, he will plug in and have increased movement speed.</string>
    <string name="star_emz_one">Enemies that stay within the cloud of Emz\'s toxic hair spray suffer increasing damage, 20% per hit.</string>
    <string name="star_emz_two">Emz recovers 300 health per second for each enemy inside her Super\'s area of effect.</string>
    <string name="star_primo_one">Enemies caught in El Primo\'s Super will burn for 1200 damage over 4 seconds.</string>
    <string name="star_primo_two">El Primo gains 25% speed boost for 4.0 seconds after using Super.</string>
    <string name="star_barley_one">Barley regains 400 health from each attack.</string>
    <string name="star_barley_two">Adds +140 damage per second to Barley’s attack.</string>
    <string name="star_poco_one">When Poco\'s attack hits friendly Brawlers they now heal for 700 health.</string>
    <string name="star_poco_two">Poco’s Super now also hits enemies, dealing 800 damage.</string>
    <string name="star_rosa_one">Rosa recovers 200 health per second when inside a bush.</string>
    <string name="star_rosa_two">Rosa’s punches gain +220 damage during her Super.</string>
        <string name="image_of_a_brawler_list_item">Image of a brawler</string>
        <string name="image_of_a_brawlers_gadget_list_item">Image of a brawlers gadget</string>
        <string name="image_of_a_brawlers_star_power_list_item">Image of a brawlers star power</string>
</resources>