<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="16dp"
    android:elevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fl_brawler_header_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <FrameLayout
                    android:id="@+id/fl_brawler_header"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iv_brawler_image"
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:scaleType="fitStart"
                        android:src="@drawable/brawler_leon"
                        android:contentDescription="@string/image_of_a_brawler_list_item" />

                    <TextView
                        android:id="@+id/tv_brawler_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Leon"
                        android:textAllCaps="true"
                        android:fontFamily="@font/lilita_one_regular"
                        style="@style/shadow_text"
                        android:textColor="@android:color/white"
                        android:layout_gravity="bottom|start"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginBottom="4dp"/>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="@+id/fl_brawler_header"
                    app:layout_constraintEnd_toEndOf="@+id/fl_brawler_header"
                    app:layout_constraintTop_toBottomOf="@+id/fl_brawler_header"
                    android:background="#ffa500">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:src="@drawable/brawler_gadget"
                            android:layout_weight="2"
                            android:contentDescription="@string/image_of_a_brawlers_gadget_list_item" />

                        <TextView
                            android:id="@+id/tv_brawler_gadget"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="2/2"
                            android:fontFamily="@font/lilita_one_regular"
                            android:textColor="@android:color/white"
                            android:layout_gravity="bottom"
                            android:layout_marginBottom="2dp"
                            style="@style/shadow_text"
                            android:layout_weight="1"/>

                        <ImageView
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:src="@drawable/brawler_star_power"
                            android:layout_weight="2"
                            android:contentDescription="@string/image_of_a_brawlers_star_power_list_item" />

                        <TextView
                            android:id="@+id/tv_brawler_star_power"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="2/2"
                            android:fontFamily="@font/lilita_one_regular"
                            android:textColor="@android:color/white"
                            android:layout_gravity="bottom"
                            android:layout_marginBottom="2dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            style="@style/shadow_text"
                            android:layout_weight="1"/>

                    </LinearLayout>

                </FrameLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>